# topic-race

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml  topic_race_colab.ipynb
.claude/: settings.local.json
src/topic_race/: aggregate.py  animate.py  app.py  auth.py  config.py  d3_race.py  layout_check.py  pipeline.py  render.py  render_video.py  storage.py  telegram_client.py
tests/: test_aggregate.py  test_atempo_chain.py  test_build_schedule.py  test_d3_race_html.py  test_event_frames.py  test_layout_check.py  test_ru_date.py  test_ru_plural.py  test_variable_tempo_filter.py
